# BonfireX

./: .env  .env.example  Caddyfile  Cargo.toml  Justfile  compose-dev.yaml
.sqlx/: query-0320fe51282c85f51532d745ff03cccbfe6371f449cd6cda336fa5f534416797.json  query-03330f5f38641c933877d0e71dacde473599443ac115713011f1a768e13cdff3.json  query-050286ea9d6222e4f0eb24c1d599e539d3a22e447524eeba9d5bbd3ec7882dae.json  query-063f0e52e6588c161aae316be084a823958d9521e8ad4b328a5f12116d572d0a.json  query-07047a2c14eb777f02850c5b7a1d32c8a96af13d29cfb52dcf3f34285e8ff41d.json  query-08884b9ea6f8feab52912aae622f7d7f280fc9b332f913ad894df9376cc14d37.json  query-08db014ce95c0c29f7decad34933d6eafcaffb7522926bc060777456c9deb998.json  query-0cbddae461dcae07cc135339dfe7dadc0851cbc6971eaa7b3e45bb9a10366ae7.json  query-0f43f3426546b4f1b57455674aa9fd6e30a7b85ee3f880919a870237540d0b2b.json  query-1310be5b33af6fa743599a29318817f3f404ce9b82ee08ee47e3861e487e38ec.json  query-139f3c5172e0e4ace1a141b7ce3a2d140925ebfbdfc0d1b27371b70286e68dee.json  query-13c85ea615b29819e8936403f3f8cfc4793326c9a9f29c005f78b93cf14cbcaf.json  query-19c5b31a856abd1ceedad245c59ee894414cd367cff85f9949a6072d2b4201da.json  query-1a72547da01fd117fd067b7d8c5c5e4f36351c84ee271d42c36f8eb87a408abf.json  (+59 more)
bfx-auth-core/: Cargo.toml
bfx-auth-core/notifications/: account_login.yml  email_verification.yml  password_change.yml
bfx-auth-core/src/: lib.rs  main.rs
bfx-auth-core/src/methods/: change_password.rs  create_user.rs  get_user_by_email.rs  get_user_by_token.rs  get_users_by_ids.rs  login_email.rs  login_external.rs  mod.rs  send_verification_email.rs  verify_email.rs
bfx-auth-core/src/models/: login_attempt.rs  mod.rs  session.rs  user.rs  user_context.rs
bfx-auth-core/src/util/: email.rs  mod.rs  password.rs  password_hashing.rs
bfx-auth-oauth/: Cargo.toml
bfx-auth-oauth-provider/: Cargo.toml
bfx-auth-oauth-provider/src/: main.rs
bfx-auth-oauth-provider/src/methods/: accept_authorization.rs  get_access_token.rs  get_authorization_info.rs  get_jwk_set.rs  get_openid_configuration.rs  mod.rs  token_endpoint.rs  userinfo_endpoint.rs
bfx-auth-oauth-provider/src/models/: client_info.rs  flow.rs  mod.rs
bfx-auth-oauth/notifications/: oauth_bound.yml  oauth_unbound.yml
bfx-auth-oauth/src/: client.rs  main.rs
bfx-auth-oauth/src/methods/: bind_oauth.rs  finish_oauth_flow.rs  get_auth_sources.rs  mod.rs  start_oauth_flow.rs  unbind_auth_source.rs
bfx-auth-oauth/src/models/: mod.rs  raw_auth_source.rs
bfx-auth-password-recovery/: Cargo.toml
bfx-auth-password-recovery/notifications/: password_reset.yml
bfx-auth-password-recovery/src/: main.rs
bfx-auth-password-recovery/src/methods/: check_password_reset_token.rs  mod.rs  request_password_recovery.rs  reset_password.rs
bfx-auth-password-recovery/templates/: password_reset.html
bfx-core/: Cargo.toml
bfx-core/src/: lib.rs  log_if_error.rs  logging.rs  service.rs  status.rs
bfx-core/src/service/: client.rs  database.rs  environment.rs  id_encryption.rs  router.rs  s3.rs
bfx-graphql/: Cargo.toml
bfx-graphql-derive/: Cargo.toml
bfx-graphql/src/: context.rs  data_loaders.rs  error.rs  id_encryption.rs  language.rs  lib.rs  main.rs  schema.rs
bfx-graphql/src/models/: blob.rs  mod.rs  ok.rs  tfa_method.rs  user.rs
bfx-graphql/src/models/user/: permission_level.rs
bfx-graphql/src/services/: mod.rs
bfx-graphql/src/services/auth_core/: change_password.rs  data_loaders.rs  login_email.rs  me.rs  mod.rs  register_email.rs  send_verification_email.rs  user_by_id.rs  verify_email.rs
bfx-graphql/src/services/auth_oauth/: auth_sources.rs  bind_oauth.rs  finish_oauth_flow.rs  mod.rs  start_oauth_flow.rs  unbind_auth_source.rs
bfx-graphql/src/services/auth_oauth_provider/: accept_authorization.rs  bearer_authorization.rs  get_authorization_info.rs  get_jwk_set.rs  get_openid_metadata.rs  mod.rs  token_endpoint.rs  userinfo_endpoint.rs
bfx-graphql/src/services/auth_password_recovery/: check_password_recovery_token.rs  mod.rs  request_password_recovery.rs  reset_password.rs
bfx-graphql/src/services/image/: data_loaders.rs  image.rs  mod.rs  request_upload.rs
bfx-graphql/src/services/markdown/: mod.rs
bfx-graphql/src/services/profile/: data_loaders.rs  mod.rs  set_profile_note.rs  update_profile.rs  update_username.rs  user_profile.rs
bfx-image/: Cargo.toml
bfx-image-http/: Cargo.toml
bfx-image-http/src/: main.rs
bfx-image-http/src/endpoints/: mod.rs  upload.rs
bfx-image-http/src/util/: image_dimensions.rs  mod.rs
bfx-image/src/: main.rs
bfx-image/src/methods/: get_image.rs  get_image_bulk.rs  mod.rs  request_upload.rs  set_image_ref.rs  use_image_ticket.rs
bfx-image/src/models/: image.rs
bfx-notification/: Cargo.toml  definition-schema.json
bfx-notification-email/: Cargo.toml
bfx-notification-email/src/: blacklist_refresher.rs  custom_header.rs  mailer.rs  main.rs
bfx-notification-email/src/methods/: check_valid_email.rs  mod.rs  send_email.rs  set_email_blocked.rs
bfx-notification/src/: definition.rs  lib.rs  main.rs
bfx-notification/src/methods/: get_notification_preferences.rs  mod.rs  send_notification.rs  set_notification_preferences.rs
bfx-notification/src/models/: mod.rs  notification.rs  preferences.rs
bfx-profile/: Cargo.toml
bfx-profile/src/: main.rs
bfx-profile/src/methods/: get_profile.rs  get_profile_bulk.rs  mod.rs  set_note.rs  update_profile.rs  update_username.rs
bfx-profile/src/models/: profile.rs
bfx-proto/: Cargo.toml  build.rs
bfx-proto/src/: date_time.rs  factory.rs  lib.rs  param_value_util.rs
bfx-proto/src/services/: auth_core.rs  image.rs  mod.rs  notification_email.rs  profile.rs  translation.rs
bfx-rpc-router/: Cargo.toml
bfx-rpc-router/src/: forwarder.rs  main.rs  registry.rs  registry_service.rs
bfx-translation/: Cargo.toml
bfx-translation-writer/: Cargo.toml
bfx-translation-writer/src/: main.rs
bfx-translation/src/: lang_id_ext.rs  localization_cache.rs  main.rs
bfx-translation/src/methods/: mod.rs  render_string_set.rs  render_template.rs  translate.rs  write_file.rs
(+45 files in other folders)
