[workspace]
members = ["bfx-auth-core", "bfx-core", "bfx-proto", "bfx-rpc-router"]
resolver = "3"

[workspace.dependencies]
bfx-core = { path = "./bfx-core" }
bfx-proto = { path = "./bfx-proto" }

tonic = { version = "0.13", features = ["router"] }
tonic-build = "0.13"
prost = "0.13"
http = "1.3"
walkdir = "2.5"

axum = "0.8"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "ipnet"] }
chrono = { version = "0.4" }

tokio = { version = "1.45", features = ["rt-multi-thread", "tracing", "net"] }
futures-util = "0.3"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }

dashmap = "6.1"
arc-swap = "1.7"
moka = { version = "0.12", features = ["future"] }
o2o = "0.5"
anyhow = "1.0"
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }
argon2 = { version = "0.6.0-pre.1", features = ["std"] }
validator = "0.20"
zxcvbn = "3.1"
jsonwebtoken = "9.3"
nanoid = "0.4"
