[workspace]
members = [
    "bfx-auth-core",
    "bfx-auth-oauth",
    "bfx-auth-oauth-provider",
    "bfx-auth-password-recovery",
    "bfx-core",
    "bfx-graphql", "bfx-graphql-derive",
    "bfx-image",
    "bfx-image-http",
    "bfx-markdown",
    "bfx-notification",
    "bfx-notification-email",
    "bfx-profile",
    "bfx-proto",
    "bfx-rpc-router",
    "bfx-translation",
    "bfx-translation-writer",
]
resolver = "3"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
used_underscore_binding = { level = "allow", priority = 10 }
pub_underscore_fields = { level = "allow", priority = 10 }
# until async-graphql fixes it
useless_let_if_seq = { level = "allow", priority = 10 }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
bfx-core = { path = "./bfx-core" }
bfx-proto = { path = "./bfx-proto" }
bfx-graphql-derive = { path = "./bfx-graphql-derive" }

tonic = { version = "0.14", features = ["router"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
http = "1.3"
walkdir = "2.5"

axum = { version = "0.8", features = ["macros"] }
async-graphql = { version = "7.0", features = ["dataloader", "chrono"] }
async-graphql-axum = "7.0"
axum-client-ip = "1.1"
axum-extra = { version = "0.10", features = ["typed-header"] }
ipnet = "2.11"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "ipnet",
    "derive",
] }
chrono = { version = "0.4" }

tokio = { version = "1.45", features = ["rt-multi-thread", "tracing", "net"] }
futures-util = "0.3"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14"

dashmap = "6.1"
arc-swap = "1.7"
moka = { version = "0.12", features = ["future"] }
o2o = "0.5"
anyhow = "1.0"
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }
argon2 = { version = "0.6.0-pre.1", features = ["std"] }
validator = "0.20"
zxcvbn = "3.1"
jsonwebtoken = "9.3"
nanoid = "0.4"
fluent = "0.17"
unic-langid = "0.9"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls",
    "ring",
    "webpki-roots",
] }
ammonia = "4.1"
hickory-resolver = "0.25"
email_address = "0.2"
reqwest = "0.12"
minijinja = "2.10"
jpegxl-rs = "0.11"
image = "0.25"
rust-s3 = "0.35"
tokio-retry = "0.3"
fast_image_resize = "5.1"
aes-gcm-siv = "0.11"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
fluent-langneg = "0.14"
# yes, officer, this library right there
serde_yml = "=0.0.12"
schemars = "1.0"
serde_json = "1.0"
openidconnect = "4.0"
form_urlencoded = "1.2"
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
unsynn = "0.1"

[profile.release-with-debug]
inherits = "release"
debug = true
