[package]
name = "bfx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
bfx-proto = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
