[package]
name = "bfx-graphql"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bfx-core = { workspace = true, features = ["id_encryption"] }
bfx-proto = { workspace = true }
bfx-graphql-derive = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum-client-ip = { workspace = true }
axum-extra = { workspace = true }
ipnet = { workspace = true }

o2o = { workspace = true }

fluent-langneg = { workspace = true }
itertools = { workspace = true }
form_urlencoded = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
