[package]
name = "bfx-notification-email"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bfx-core = { workspace = true }
bfx-proto = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

lettre = { workspace = true }
ammonia = { workspace = true }
hickory-resolver = { workspace = true }
email_address = { workspace = true }
reqwest = { workspace = true }
nanoid = { workspace = true }
