[package]
name = "bfx-proto"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
walkdir = { workspace = true }
