[package]
name = "bfx-translation"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bfx-core = { workspace = true }
bfx-proto = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

fluent = { workspace = true }
unic-langid = { workspace = true }
dashmap = { workspace = true }
minijinja = { workspace = true }
